Fix wrapping。

--- a/source/stylesheets/info.sass
+++ b/source/stylesheets/info.sass
@@ -14,32 +14,32 @@ info_wrapper
   display: flex
   flex-wrap: wrap
 
-.info
-  display: inline-block
-  flex: 1 0 0
-  min-width: 188px
-  text-align: center
-  border: 1px solid #424242
-  padding: 5px 10px
-  margin: 20px 20px
+  .info
+    display: inline-block
+    flex: 1 0 0
+    min-width: 188px
+    text-align: center
+    border: 1px solid #424242
+    padding: 5px 10px
+    margin: 20px 20px
 
-.info-title
-  display: block
-  color: #AFCEEC
+  .info-title
+    display: block
+    color: #AFCEEC
 
-.info-value
-  font-size: 2em
+  .info-value
+    font-size: 2em
 
-.info-value-divider
-  display: inline
-  color: #939393
-  font-size: 2.4em
-  padding-left: 7px
+  .info-value-divider
+    display: inline
+    color: #939393
+    font-size: 2.4em
+    padding-left: 7px
 
-.info-label
-  color: #AFCEEC
-  display: block
-  font-size: .8em
+  .info-label
+    color: #AFCEEC
+    display: block
+    font-size: .8em
 
 
 x_cont
@@ -70,7 +70,7 @@ x_cont
     width: 10%
     text-align: center
     color: #939393
-  x_right
+  .info
     font-size: 1.4em
     width: 45%
     text-align: left
